--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "An Ethereum Marketplace",
   "author": "",
   "dependencies": {
+    "accordion": "^3.0.2",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "^4.3.1",
+    "card": "^2.4.0",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-collapsible": "^2.6.2",
     "react-dom": "16.8.4",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-router-flux": "^4.0.6",
