--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "ipfs": "^0.41.1",
+    "ipfs-http-client": "^33.1.1",
     "react": "16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-collapsible": "^2.6.2",
