--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-flow-vars": "^0.5.0",
     "ipfs": "^0.41.1",
     "ipfs-http-client": "^33.1.1",
     "react": "16.8.4",
@@ -30,6 +32,7 @@
     "react-notifications-component": "^2.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3",
+    "react-select": "^3.0.8",
     "react-web3": "^1.2.0",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
