--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-flow-vars": "^0.5.0",
     "ipfs": "^0.41.1",
     "ipfs-http-client": "^33.1.1",
+    "jquery": "^3.4.1",
     "react": "16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-collapsible": "^2.6.2",
