--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "dependencies": {
     "accordion": "^3.0.2",
+    "axios": "^0.19.2",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
