--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "An Ethereum Marketplace",
   "author": "",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "accordion": "^3.0.2",
     "axios": "^0.19.2",
     "babel-polyfill": "6.26.0",
@@ -17,15 +21,21 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "css": "^2.2.4",
+    "date-fns": "^2.0.0-beta.5",
     "eslint": "^5.6.0",
     "eslint-plugin-flow-vars": "^0.5.0",
+    "html2canvas": "^1.0.0-rc.5",
     "ipfs": "^0.41.1",
     "ipfs-http-client": "^33.1.1",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
+    "material-ui-pickers": "^2.2.4",
     "react": "16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-collapsible": "^2.6.2",
-    "react-dom": "16.8.4",
+    "react-dom": "^16.8.4",
+    "react-fullscreen-image": "0.0.3",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-router-flux": "^4.0.6",
     "react-navigation": "^4.0.10",
@@ -35,6 +45,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3",
     "react-select": "^3.0.8",
+    "react-time-picker": "^3.9.0",
+    "react-to-pdf": "0.0.10",
     "react-web3": "^1.2.0",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
