--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
+    "@truffle/hdwallet-provider": "^1.0.35",
     "accordion": "^3.0.2",
     "axios": "^0.19.2",
     "babel-polyfill": "6.26.0",
