--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
+    "bignumber.js": "^9.0.0",
     "bootstrap": "^4.3.1",
     "card": "^2.4.0",
     "chai": "4.2.0",
